@@ -13,6 +13,7 @@
 * Readded list view double buffering (thanks poy)
 * Fixed some msvc compile issues (thanks james ross)
 * Fixed key handling in file listings (poy)
+* Message always focused first in chats (poy)
 
 -- 0.703 2007-11-08 --
 * Fixed invalid strings (thanks james ross)
